Refactor planned trip management in smartdiaodu.py to support multi-batch scheduling, update API endpoints for adding and completing trips, and enhance documentation for clarity on new functionalities. Adjust web interface to reflect changes in trip planning and improve user interaction with the navigation panel.

--- a/docs/三种调度模式切换说明.md
+++ b/docs/三种调度模式切换说明.md
@@ -4,10 +4,12 @@
 
 | 模式值 | 含义 | 大脑行为 |
 |--------|------|----------|
-| **mode1** | 出发前找单 | 不跑单笔评估；需用规划任务接口设定「出发地、目的地、时间、2～4 单」，由探针/筛选按条件盯单，批量优化接口后续扩展。 |
+| **mode1** | 下次计划 | 不跑单笔评估；需用下次计划接口设定「出发地、目的地、出发时间、2～4 单」，由探子/调度脚本按条件找单，批量优化接口后续扩展。 |
 | **mode2** | 路上接满 | 在规定耽误时间内（默认 20～60 分钟）接顺路单；超过 20 分钟只在高收益（默认 ≥100 元）时放宽到 60 分钟。 |
-| **mode3** | 送人后周边接单 | 只考虑「当前位→新单起点」驾车时间 ≤ 设定时效（默认 30 分钟）的单，接单后重规划整条线路。 |
+| **mode3** | 附近接力 | 送人后周边接单，只考虑「当前位→新单起点」驾车时间 ≤ 设定时效（默认 30 分钟）的单，接单后重规划整条线路。**优先级最高**：探子/调度应先按附近接力找单。 |
 | **pause** | 停止接单 | 不评估、不推送，直接返回 ignored。 |
+
+**优先级与放弃行为**：附近接力任务优先级最高，探子/调度先帮司机找附近接力单。若司机**放弃接力任务**（在推送反馈页选「不接」且「不再接单」），大脑会自动**开启计划寻找**（切换为 mode1），探子将按「下次计划」找单，无需手动切模式。
 
 ---
 
@@ -35,9 +37,12 @@
   `GET /driver_mode_config`、`PUT /driver_mode_config`  
   请求体示例：`{ "mode2_detour_max": 60, "mode3_max_minutes_to_pickup": 20, "mode3_max_detour_minutes": 30 }`（只传要改的字段；`mode3_max_detour_minutes` 即「耽误多久」阈值）
 
-- **模式1 规划任务**  
-  `PUT /planned_trip`：`{ "origin": "如东荣生花苑", "destination": "上海", "departure_time": "06:00", "time_window_minutes": 30, "min_orders": 2, "max_orders": 4 }`  
-  `GET /planned_trip`：返回当前设定；`DELETE /planned_trip`：清除。
+- **多批次下次计划（模式1）**  
+  - **计划不删**，只结束找单任务。未结束的按出发时间从早到晚排前，已结束的排后；探子/调度用**第一条 `completed === false`** 的找单，完成后点「结束找单」即进入下一批。  
+  - `GET /planned_trip`：返回 `{ "plans": [ { …, "completed": true/false }, … ] }`（未完成的在前）。  
+  - `POST /planned_trip`：新增一批。  
+  - `PUT /planned_trip`：更新指定一批，请求体 `{ "index": 0, "origin", "destination", "departure_time", … }`。  
+  - `POST /planned_trip/complete?index=0`：结束该批找单任务（计划保留），下一批自动接上。
 
 示例（curl）：
 
