--- a/docs/整体逻辑审核.md
+++ b/docs/整体逻辑审核.md
@@ -62,7 +62,7 @@
 ### 2. index.html（控制台）
 
 - 模式：GET/PUT `/driver_mode`；模式参数：GET/PUT `/driver_mode_config`。✓
-- 规划任务：GET/PUT/DELETE `/planned_trip`；读取时用 `d.origin` 等，无规划时后端返回 `{ set: false }` 无 origin，前端用 `if (d.origin)` 不误填。✓
+- 多批次下次计划：GET 返回 `{ "plans": [...] }`，POST 新增、PUT 按 index 更新、DELETE 按 index 删除；探子/调度遍历 plans 按每批找单。✓
 - 地图：POST `/current_route_preview`，body `{ current_state }`，用返回的 `route_coords`（WGS84）、`point_types`、`route_addresses` 绘制。✓
 
 ---
