--- a/docs/网页单页与多页取舍.md
+++ b/docs/网页单页与多页取舍.md
@@ -6,7 +6,7 @@
 
 | 标签 | 内容 |
 |------|------|
-| **模式1 规划找单** | 规划任务表单（出发地、目的地、出发时间、2～4 单），保存/读取 `planned_trip`。 |
+| **下次计划（模式1）** | 多批次计划列表（每批：出发时间、出发地、目的地），添加/保存/删除各批，探子/调度遍历 `GET /planned_trip` 的 plans 按每批找单。 |
 | **行程与地图** | 当前状态（司机位置、接/送地址）+「更新地图」+ 地图（起终点与路径规划）。模式2、模式3 共用这一块。 |
 | **设置** | API 地址、当前模式切换、模式参数（耽误时间、高收益门槛等）。 |
 
